fixing of alignment in logo

--- a/views/scss/header.scss
+++ b/views/scss/header.scss
@@ -26,8 +26,8 @@ a {
 
 #dept-switch {
 		display: none;
-}
 
+}
 .fold {
 	position: fixed;
 	bottom: 0;
@@ -212,7 +212,7 @@ background-color:#38939b;
 	float: left;
 	border: none;
 	display: block;
-	padding: .5em;
+	padding: .55em;
 	text-align: center;
 	margin-right: 0;
 	
@@ -312,7 +312,7 @@ header {
 	.close {position: absolute; top: 1.5%; right: 3%; color: white; font-size: 1.5em;}
 	.close:hover {color: rgba(#fff, .5)}
 	
-	h2 {color: #014c80; padding: .25em; text-transform: uppercase;}
+	h2 {color: #014c80; padding: .25em 0 .25em .25em; text-transform: uppercase;}
 	
 	ul {
 		-webkit-column-count: 4;
@@ -373,6 +373,7 @@ h1 {
 .county-name span {
 	font-size: .6em;
 	font-family: 'Trade Gothic W01 Roman';
+	padding: 0 0.2em 0 0.1em;
 }
 
 .county-name:hover {
@@ -479,7 +480,7 @@ h2 {
 	float: left;
 	border: none;
 	display: block;
-	padding: .5em;
+	padding: .55em;
 	text-align: center;
 	margin-right: 0;
 	
